Adds the tag-list component and updates the translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,3 +30,11 @@ en:
   language: "Language"
   search: "Search"
   follow_us: "Follow us"
+  projects_submitted: "Projects submitted"
+  total_events: "Total events"
+  people: "People"
+  articles: "Articles"
+  featured_project: "Featured project"
+  read_article: "Read article"
+  project_update: "Project update"
+  event: "Event"
