--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,3 +38,7 @@ en:
   read_article: "Read article"
   project_update: "Project update"
   event: "Event"
+  network: "Network"
+  projects: "Projects"
+  massages: "Massages"
+  saved_maps: "Saved Maps"
