Fill home with cards left & cards new properties

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,21 +29,25 @@ en:
   data: "Data"
   event: "Event"
   events: "Events"
+  featured_organization: "Featured organization"
   featured_project: "Featured project"
   follow_us: "Follow us"
   language: "Language"
   login: "Login"
   map: "Map"
+  massages: "Massages"
+  network: "Network"
+  new_organization: "New organization"
+  new_post: "New post"
+  new_project: "New project"
   people: "People"
   posts: "Posts"
   project_update: "Project update"
   projects: "Projects"
   projects_submitted: "Projects submitted"
   read_article: "Read article"
+  saved_maps: "Saved Maps"
   search: "Search"
   sign_up: "Sign up"
   submit_project: "Submit a project"
   total_events: "Total events"
-  network: "Network"
-  massages: "Massages"
-  saved_maps: "Saved Maps"
