--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
   read_article: "Read article"
   saved_maps: "Saved Maps"
   search: "Search"
+  search_placeholder: "Type the country name_"
   sign_up: "Sign up"
   submit_project: "Submit a project"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
