Map intro legend component

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,7 @@ en:
   articles: "Articles"
   breast: "Breast"
   cancer_types: "Cancer types"
+  collaborators: "Collaborators"
   countries: "Countries"
   data: "Data"
   event: "Event"
@@ -45,6 +46,7 @@ en:
   other: "Other"
   people: "People"
   posts: "Posts"
+  project_leads: "Project leads"
   project_update: "Project update"
   projects: "Projects"
   projects_submitted: "Projects submitted"
