Profile intro style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,8 +56,10 @@ en:
   saved_maps: "Saved Maps"
   search: "Search"
   search_placeholder: "Type the country name_"
+  share_my_info: "Share my info"
   sign_up: "Sign up"
   submit_project: "Submit a project"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
+  you: "You"
   your_profile: "Your profile"
