--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
   collaborators: "Collaborators"
   countries: "Countries"
   data: "Data"
+  download: "Download"
   edit: "Edit"
   event: "Event"
   events: "Events"
