changes download text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
   collaborators: "Collaborators"
   countries: "Countries"
   data: "Data"
-  download: "Download"
+  download: "User Manual"
   edit: "Edit"
   delete: "Delete"
   ends: "Ends"
