--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,5 +74,5 @@ en:
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
   you: "You"
-  your_profile: "Your profile"
-  your_projects: "Your projects"
+  your_profile: "Your Profile"
+  your_projects: "Your Projects"
