--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@
 en:
   about: "About"
   active: "Active"
+  add_event: "Add event"
   add_project: "Add project"
   articles: "Articles"
   breast: "Breast"
