Adds investigators links and minor style fits

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,7 @@ en:
   articles: "Articles"
   breast: "Breast"
   cancer_types: "Cancer types"
+  collaborator: "Collaborator"
   collaborators: "Collaborators"
   countries: "Countries"
   data: "Data"
@@ -43,6 +44,7 @@ en:
   follow_us: "Follow us"
   following: "Following"
   funding_source: "Funding source"
+  investigator: "Investigator"
   language: "Language"
   location: "Location"
   login: "Login"
@@ -58,6 +60,7 @@ en:
   other: "Other"
   people: "People"
   posts: "Posts"
+  project_lead: "Project lead"
   project_leads: "Project leads"
   project_types: "Project types"
   project_update: "Project update"
