--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,8 @@ en:
   collaborator: "Collaborator"
   collaborators: "Collaborators"
   countries: "Countries"
+  created_asc: "Created asc"
+  created_desc: "Created desc"
   data: "Data"
   download: "User Manual"
   edit: "Edit"
@@ -75,6 +77,8 @@ en:
   sign_up: "Sign up"
   starts: "Starts"
   submit_project: "Submit a project"
+  title_asc: "Title asc"
+  title_desc: "Title desc"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
   you: "You"
