Event detail more content

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,7 @@ en:
   title_desc: "Title desc"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
+  website: "Website"
   you: "You"
   your_profile: "Your Profile"
   your_projects: "Your Projects"
