--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
   created_asc: "Created asc"
   created_desc: "Created desc"
   data: "Data"
+  description: "Description"
   download: "User Manual"
   edit: "Edit"
   delete: "Delete"
