Follow: button added to country and cancer type page. Redirect to login if user doesn not exist

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,6 +44,8 @@ en:
   events: "Events"
   featured_organization: "Featured organization"
   featured_project: "Featured project"
+  follow: "Follow"
+  unfollow: "Unfollow"
   follow_us: "Follow us"
   following: "Following"
   funding_source: "Funding source"
