Update project button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,6 +84,7 @@ en:
   title_desc: "Title desc"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
+  update_project: "Update project"
   website: "Website"
   you: "You"
   your_profile: "Your Profile"
