Investigators publications page link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
   project_update: "Project update"
   projects: "Projects"
   projects_submitted: "Projects submitted"
+  publications: "Publications"
   read_article: "Read article"
   saved_maps: "Saved Maps"
   search: "Search"
