--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,7 @@ en:
   new_post: "New post"
   new_project: "New project"
   non_melanoma_skin_cancer: "Non-melanoma skin cancer"
+  not_me: "Not me"
   organization: "Organization"
   other: "Other"
   people: "People"
@@ -82,6 +83,7 @@ en:
   sign_up: "Sign up"
   starts: "Starts"
   submit_project: "Submit a project"
+  this_is_me: "This is me"
   title_asc: "Title asc"
   title_desc: "Title desc"
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
