Message button in investigator detail page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
   login: "Login"
   logout: "Log out"
   map: "Map"
+  massage: "Massage"
   massages: "Massages"
   network: "Network"
   new_organization: "New organization"
