Show specialities on each project

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,6 +83,7 @@ en:
   share_my_info: "Share my info"
   show_more: "Show more"
   sign_up: "Sign up"
+  specialities: "Specialities"
   starts: "Starts"
   submit_project: "Submit a project"
   this_is_me: "This is me"
