User followable and network list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,6 +92,7 @@ en:
   trachea_bronchus_and_lung: "Trachea, bronchus and lung"
   total_events: "Total events"
   update_project: "Update project"
+  users: "Users"
   website: "Website"
   you: "You"
   your_profile: "Your Profile"
