Investigator changed along the app

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,7 +51,7 @@ en:
   follow_us: "Follow us"
   following: "Following"
   funding_source: "Funding source"
-  investigator: "Investigator"
+  investigator: "Project Lead/Collaborator"
   language: "Language"
   location: "Location"
   login: "Login"
